Added proper header to document

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>David Bowie | The star who transcended music, art and fashion</title>
+    </head>
+    <body>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <div id="wrapper">
@@ -36,3 +43,5 @@
     <input type="submit" id="submit">
    </form>
 </div>
+</body>
+</html>
