Adjusting elements and font-size

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>David Bowie | The star who transcended music, art and fashion</title>
+        <title>Tell us about your hiking journey</title>
     </head>
     <body>
 <link rel="stylesheet" href="style.css">
