Got rid of some of the elements sizing properties, decided to rebuild focusing on mobile first

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <link rel="stylesheet" href="style.css">
         <title>Tell us about your hiking journey</title>
     </head>
-    <body>
+<body>
 <link rel="stylesheet" href="style.css">
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <div id="wrapper">
-  <h1 id="title">Tell us about your hiking journey</h1>
-  <p id="description">Hiking in nature is not only good for our bodies, it's good for our moods, our minds, and our relationships, too.</p>
-  <form id="survey-form">
+  <header>
+    <h1 id="title">Tell us about your hiking journey</h1>
+    <p id="description">Hiking in nature is not only good for our bodies, it's good for our moods, our minds, and our relationships, too.</p>
+  </header>
+    <form id="survey-form">
     <label for="name" id="name-label">Name</label>
     <input id="name" type="text" name="name" placeholder="Enter your name" required/>
     <label for="email" id="email-label">Email</label>
