--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>Tell us about your hiking journey</title>
-    </head>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <title>Tell us about your hiking journey</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
-<link rel="stylesheet" href="style.css">
-<div id="wrapper">
-  <header>
+  <section id="section01">
     <h1 id="title">Tell us about your hiking journey</h1>
-    <p id="description">Hiking in nature is not only good for our bodies, it's good for our moods, our minds, and our relationships, too.</p>
-  </header>
+    <p id="description">Hiking in nature is not only good for our bodies, it's good for our moods, our minds, and
+      our relationships, too.</p>
+    <a id="anchor" href="#survey-form"><span id="circle"><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd" clip-rule="evenodd">
+          <path d="M11 21.883l-6.235-7.527-.765.644 7.521 9 7.479-9-.764-.645-6.236 7.529v-21.884h-1v21.883z" />
+        </svg></span></a>
+  </section>
+  <section id="section02">
     <form id="survey-form">
-    <label for="name" id="name-label">Name</label>
-    <input id="name" type="text" name="name" placeholder="Enter your name" required/>
-    <label for="email" id="email-label">Email</label>
-    <input id="email" type="email" name="email" placeholder="Enter your email" required/>
-    <label for="number" id="number-label">Number</label>
-    <input id="number" name="number" type="number" placeholder="Enter a number from 1 to 10" min="0" max="10" required/>
-    <label for="dropdown"></label>
-    <select id="dropdown" name="dropdown" required>
-      <option disabled selected value>Select an option</option>
-      <option value="op1">Option 1</option>
-      <option value="op2">Option 2</option>
-      <option value="op3">Option 3</option>
+      <label for="name" id="name-label">Name</label>
+      <input id="name" type="text" name="name" placeholder="Enter your name" required />
+      <label for="email" id="email-label">Email</label>
+      <input id="email" type="email" name="email" placeholder="Enter your email" required />
+      <label for="number" id="number-label">Number</label>
+      <input id="number" name="number" type="number" placeholder="Enter a number from 1 to 10" min="0" max="10"
+        required />
+      <label for="dropdown"></label>
+      <select id="dropdown" name="dropdown" required>
+        <option disabled selected value>Select an option</option>
+        <option value="op1">Option 1</option>
+        <option value="op2">Option 2</option>
+        <option value="op3">Option 3</option>
       </select>
-    <label for="radio">This are radio options</label>
-    <input type="radio" name="option" value="Option1">
-    <label for="radio">Option  1</label>
-    <input type="radio" name="option" value="Option2">
-    <label for="radio">Option  2</label>
-    <input type="radio" name="option" value="Option3">
-    <label for="radio">Option  3</label>
-    <label for="checkbox">This are checkboxes</label>
-    <input type="checkbox" name="cb1" value="cb1">
-    <label for="cb1">Checkbox 1</label>
-    <input type="checkbox" name="cb2" value="cb2">
-    <label for="cb2">Checkbox 2</label>
-    <input type="checkbox" name="cb3" value="cb3">
-    <label for="cb3">Checkbox 3</label>
-    <label for="textarea">Any aditional comments?</label>
-    <textarea name="textarea"></textarea>
-    <input type="submit" id="submit">
-   </form>
-</div>
+      <label for="radio">This are radio options</label>
+      <div id="radio-options">
+        <label for="radio">Option 1</label>
+        <input type="radio" name="option" value="Option1">
+        <label for="radio">Option 2</label>
+        <input type="radio" name="option" value="Option2">
+        <label for="radio">Option 3</label>
+        <input type="radio" name="option" value="Option3">
+      </div>
+      <label for="checkbox">This are checkboxes</label>
+      <input type="checkbox" name="cb1" value="cb1">
+      <label for="cb1">Checkbox 1</label>
+      <input type="checkbox" name="cb2" value="cb2">
+      <label for="cb2">Checkbox 2</label>
+      <input type="checkbox" name="cb3" value="cb3">
+      <label for="cb3">Checkbox 3</label>
+      <label for="textarea">Any aditional comments?</label>
+      <textarea name="textarea"></textarea>
+      <input type="submit" id="submit">
+    </form>
+  </section>
 </body>
+
 </html>
