--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <h1 id="title">Tell us about your hiking journey</h1>
     <p id="description">Hiking in nature is not only good for our bodies, it's good for our moods, our minds, and
       our relationships, too.</p>
-    <a id="anchor" href="#survey-form"><span id="circle"><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"
-          fill-rule="evenodd" clip-rule="evenodd">
-          <path d="M11 21.883l-6.235-7.527-.765.644 7.521 9 7.479-9-.764-.645-6.236 7.529v-21.884h-1v21.883z"/>
-        </svg></span></a>
+    <a id="anchor" href="#survey-form"><span></span></a>
   </section>
   <section id="section02">
     <form id="survey-form">
@@ -54,5 +51,4 @@
     </form>
   </section>
 </body>
-
 </html>
