Still working on making the survey aesthetic for desktop view

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="style.css">
   <title>Tell us about your hiking journey</title>
@@ -19,10 +20,10 @@
       <input id="name" type="text" name="name" placeholder="Enter your name" required />
       <label for="email" id="email-label">Email</label>
       <input id="email" type="email" name="email" placeholder="Enter your email" required />
-      <label for="number" id="number-label">Number</label>
-      <input id="number" name="number" type="number" placeholder="Enter a number from 1 to 10" min="0" max="10"
+      <label for="number" id="number-label">How many times a week usually do you hike?</label>
+      <input id="number" name="number" type="number" placeholder="Enter a number from 1 to 7" min="0" max="7"
         required />
-      <label for="dropdown"></label>
+      <label for="dropdown">This is a dropdown</label>
       <select id="dropdown" name="dropdown" required>
         <option disabled selected value>Select an option</option>
         <option value="op1">Option 1</option>
@@ -39,16 +40,23 @@
         <input type="radio" name="option" value="Option3">
       </div>
       <label for="checkbox">This are checkboxes</label>
-      <input type="checkbox" name="cb1" value="cb1">
-      <label for="cb1">Checkbox 1</label>
-      <input type="checkbox" name="cb2" value="cb2">
-      <label for="cb2">Checkbox 2</label>
-      <input type="checkbox" name="cb3" value="cb3">
-      <label for="cb3">Checkbox 3</label>
+      <div id="checkbox1">
+        <input type="checkbox" name="cb1" value="cb1">
+        <label for="cb1">Checkbox 1</label>
+      </div>
+      <div id="checkbox1">
+        <input type="checkbox" name="cb2" value="cb2">
+        <label for="cb2">Checkbox 2</label>
+      </div>
+      <div id="checkbox1">
+        <input type="checkbox" name="cb3" value="cb3">
+        <label for="cb3">Checkbox 3</label>
+      </div>
       <label for="textarea">Any aditional comments?</label>
       <textarea name="textarea"></textarea>
       <input type="submit" id="submit">
     </form>
   </section>
 </body>
+
 </html>
