Just added values to the radio fields (required by freecodecamp cdn

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       </select>
       <label for="radio">Would you join a hiking club?</label>
       <div>
-        <input type="radio" name="joinclub">
+        <input type="radio" value="yes" name="joinclub">
         <label>Yes</label>
       </div>
       <div>
-        <input type="radio" name="joinclub">
+        <input type="radio" value="no" name="joinclub">
         <label>No</label>
       </div>
       <label for="checkbox">What time do you prefer for hiking?</label>
