Added an YT iFrame to the second section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <a onClick="hiding();" id="anchor" href="#survey-form"><span></span></a>
   </section>
   <section id="section02">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/F-0i2l3sqno" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
     <form id="survey-form">
       <label for="name" id="name-label">Name</label>
       <input id="name" type="text" name="name" placeholder="Enter your name" required />
@@ -59,7 +62,7 @@
         <input type="checkbox" name="cb3" value="cb3">
         <label for="cb3">Evening</label>
       </div>
-      <label for="textarea">Tell us about your favorite hiking trail (Optional)</label>
+      <label id="texta" for="textarea">Tell us about your favorite hiking trail</label>
       <textarea name="textarea"></textarea>
       <input type="submit" id="submit">
     </form>
