--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a onClick="hiding();" id="anchor" href="#survey-form"><span></span></a>
   </section>
   <section id="section02">
+    <h2>Live your own adventure</h2>
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/F-0i2l3sqno" title="YouTube video player"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
